--- a/NoSQL_setup_Part1andPart2-Starter.ipynb
+++ b/NoSQL_setup_Part1andPart2-Starter.ipynb
@@ -37,7 +37,7 @@
    "source": [
     "# Import dependencies\n",
     "from pymongo import MongoClient\n",
-    "from pprint import pprint"
+    "from pprint import pprint as pp"
    ]
   },
   {
@@ -47,7 +47,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create an instance of MongoClient\n"
+    "# Create an instance of MongoClient\n",
+    "mongo = MongoClient(port=27017)"
    ]
   },
   {
@@ -60,12 +61,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['admin', 'autosaurus', 'classDB', 'config', 'demoDB', 'fruits_db', 'local', 'uk_food']\n"
+      "['ETLDemoDB01', 'TravelDB2', 'admin', 'autosaurus', 'classDB', 'config', 'demoDB', 'fruits_db', 'local', 'met', 'uk_food']\n"
      ]
     }
    ],
    "source": [
-    "# confirm that our new database was created\n"
+    "# confirm that our new database was created\n",
+    "print(mongo.list_database_names())"
    ]
   },
   {
@@ -75,7 +77,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# assign the uk_food database to a variable name\n"
+    "# assign the uk_food database to a variable name\n",
+    "db = mongo['uk_food']"
    ]
   },
   {
@@ -93,7 +96,8 @@
     }
    ],
    "source": [
-    "# review the collections in our new database\n"
+    "# review the collections in our new database\n",
+    "print(db.list_collection_names())"
    ]
   },
   {
@@ -106,32 +110,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'AddressLine1': 'The Bay',\n",
-      " 'AddressLine2': 'St Margarets Bay',\n",
-      " 'AddressLine3': 'Kent',\n",
-      " 'AddressLine4': '',\n",
-      " 'BusinessName': 'Refreshment Kiosk',\n",
+      "{'AddressLine1': 'East Cliff Pavilion',\n",
+      " 'AddressLine2': 'Wear Bay Road',\n",
+      " 'AddressLine3': 'Folkestone',\n",
+      " 'AddressLine4': 'Kent',\n",
+      " 'BusinessName': 'The Pavilion',\n",
       " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
       " 'BusinessTypeID': 1,\n",
       " 'ChangesByServerID': 0,\n",
-      " 'Distance': 4587.347174863443,\n",
-      " 'FHRSID': 254719,\n",
-      " 'LocalAuthorityBusinessID': 'PI/000069980',\n",
-      " 'LocalAuthorityCode': '182',\n",
-      " 'LocalAuthorityEmailAddress': 'publicprotection@dover.gov.uk',\n",
-      " 'LocalAuthorityName': 'Dover',\n",
-      " 'LocalAuthorityWebSite': 'http://www.dover.gov.uk/',\n",
+      " 'Distance': 4591.765489457773,\n",
+      " 'FHRSID': 1043695,\n",
+      " 'LocalAuthorityBusinessID': 'PI/000073616',\n",
+      " 'LocalAuthorityCode': '188',\n",
+      " 'LocalAuthorityEmailAddress': 'foodteam@folkestone-hythe.gov.uk',\n",
+      " 'LocalAuthorityName': 'Folkestone and Hythe',\n",
+      " 'LocalAuthorityWebSite': 'http://www.folkestone-hythe.gov.uk',\n",
       " 'NewRatingPending': False,\n",
       " 'Phone': '',\n",
-      " 'PostCode': 'CT15 6DY',\n",
-      " 'RatingDate': '2022-03-24T00:00:00',\n",
+      " 'PostCode': 'CT19 6BL',\n",
+      " 'RatingDate': '2018-04-04T00:00:00',\n",
       " 'RatingKey': 'fhrs_5_en-gb',\n",
       " 'RatingValue': '5',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('6435b44dc8c008d6068394ce'),\n",
-      " 'geocode': {'latitude': '51.152225', 'longitude': '1.387974'},\n",
-      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/254719',\n",
+      " '_id': ObjectId('643609e4a9193452cf0bf0b9'),\n",
+      " 'geocode': {'latitude': '51.083812', 'longitude': 1.195625},\n",
+      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1043695',\n",
       "            'rel': 'self'}],\n",
       " 'meta': {'dataSource': None,\n",
       "          'extractDate': '0001-01-01T00:00:00',\n",
@@ -141,12 +145,13 @@
       "          'returncode': None,\n",
       "          'totalCount': 0,\n",
       "          'totalPages': 0},\n",
-      " 'scores': {'ConfidenceInManagement': 5, 'Hygiene': 0, 'Structural': 5}}\n"
+      " 'scores': {'ConfidenceInManagement': 5, 'Hygiene': 5, 'Structural': 5}}\n"
      ]
     }
    ],
    "source": [
-    "# review a document in the establishments collection - use .find_one()\n"
+    "# review a document in the establishments collection - use .find_one()\n",
+    "pp(db.establishments.find_one())"
    ]
   },
   {
@@ -156,7 +161,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# assign the collection to a variable\n"
+    "# assign the collection to a variable\n",
+    "est = db['establishments']"
    ]
   },
   {
@@ -222,7 +228,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertOneResult at 0x25785f2c880>"
+       "<pymongo.results.InsertOneResult at 0x1a687cfddf0>"
       ]
      },
      "execution_count": 9,
@@ -231,7 +237,8 @@
     }
    ],
    "source": [
-    "# Insert the new restaurant into the collection - use .insert_one()\n"
+    "# Insert the new restaurant into the collection - use .insert_one()\n",
+    "est.insert_one(new_restaurant)"
    ]
   },
   {
@@ -241,34 +248,39 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'AddressLine1': 'Penang Flavours',\n",
-      " 'AddressLine2': '146A Plumstead Rd',\n",
-      " 'AddressLine3': 'London',\n",
-      " 'AddressLine4': '',\n",
-      " 'BusinessName': 'Penang Flavours',\n",
-      " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
-      " 'BusinessTypeID': '',\n",
-      " 'Distance': 4623.972328074718,\n",
-      " 'LocalAuthorityCode': '511',\n",
-      " 'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk',\n",
-      " 'LocalAuthorityName': 'Greenwich',\n",
-      " 'LocalAuthorityWebSite': 'http://www.royalgreenwich.gov.uk',\n",
-      " 'NewRatingPending': True,\n",
-      " 'Phone': '',\n",
-      " 'PostCode': 'SE18 7DY',\n",
-      " 'RightToReply': '',\n",
-      " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('6435b6241f56070430adaf53'),\n",
-      " 'geocode': {'latitude': '51.49014200', 'longitude': '0.08384000'},\n",
-      " 'scores': {'ConfidenceInManagement': '', 'Hygiene': '', 'Structural': ''}}\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{'_id': ObjectId('643b3f85e85e67a2fe53d456'),\n",
+       " 'BusinessName': 'Penang Flavours',\n",
+       " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+       " 'BusinessTypeID': 1,\n",
+       " 'AddressLine1': 'Penang Flavours',\n",
+       " 'AddressLine2': '146A Plumstead Rd',\n",
+       " 'AddressLine3': 'London',\n",
+       " 'AddressLine4': '',\n",
+       " 'PostCode': 'SE18 7DY',\n",
+       " 'Phone': '',\n",
+       " 'LocalAuthorityCode': '511',\n",
+       " 'LocalAuthorityName': 'Greenwich',\n",
+       " 'LocalAuthorityWebSite': 'http://www.royalgreenwich.gov.uk',\n",
+       " 'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk',\n",
+       " 'scores': {'Hygiene': '', 'Structural': '', 'ConfidenceInManagement': ''},\n",
+       " 'SchemeType': 'FHRS',\n",
+       " 'geocode': {'longitude': 0.08384, 'latitude': '51.49014200'},\n",
+       " 'RightToReply': '',\n",
+       " 'Distance': 4623.972328074718,\n",
+       " 'NewRatingPending': True}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Check that the new restaurant was inserted -  \"BusinessName\":\"Penang Flavours\"\n"
+    "# Check that the new restaurant was inserted -  \"BusinessName\":\"Penang Flavours\"\n",
+    "new_restaurant = est.find_one({\"BusinessName\":\"Penang Flavours\"})\n",
+    "new_restaurant"
    ]
   },
   {
@@ -291,13 +303,17 @@
      "text": [
       "{'BusinessType': 'Restaurant/Cafe/Canteen',\n",
       " 'BusinessTypeID': 1,\n",
-      " '_id': ObjectId('6435b44dc8c008d6068394ce')}\n"
+      " '_id': ObjectId('643609e4a9193452cf0bf0b9')}\n"
      ]
     }
    ],
    "source": [
     "# Find the BusinessTypeID for \"Restaurant/Cafe/Canteen\" and return only the BusinessTypeID and BusinessType fields\n",
-    "\n"
+    "query = {\"BusinessType\":\"Restaurant/Cafe/Canteen\"}\n",
+    "fields = {\"BusinessTypeID\": 1, \"BusinessType\": 1}\n",
+    "results = est.find(query, fields)\n",
+    "\n",
+    "pp(results[0])"
    ]
   },
   {
@@ -317,7 +333,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x257862ddc70>"
+       "<pymongo.results.UpdateResult at 0x1a685a80b50>"
       ]
      },
      "execution_count": 12,
@@ -327,7 +343,9 @@
    ],
    "source": [
     "# Update the new restaurant with the correct BusinessTypeID - update_one\n",
-    "\n"
+    "filter = { \"BusinessName\":\"Penang Flavours\" }\n",
+    "update = {\"$set\":{\"BusinessTypeID\": 1}}\n",
+    "est.update_one(filter, update)"
    ]
   },
   {
@@ -337,34 +355,38 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'AddressLine1': 'Penang Flavours',\n",
-      " 'AddressLine2': '146A Plumstead Rd',\n",
-      " 'AddressLine3': 'London',\n",
-      " 'AddressLine4': '',\n",
-      " 'BusinessName': 'Penang Flavours',\n",
-      " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
-      " 'BusinessTypeID': 1,\n",
-      " 'Distance': 4623.972328074718,\n",
-      " 'LocalAuthorityCode': '511',\n",
-      " 'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk',\n",
-      " 'LocalAuthorityName': 'Greenwich',\n",
-      " 'LocalAuthorityWebSite': 'http://www.royalgreenwich.gov.uk',\n",
-      " 'NewRatingPending': True,\n",
-      " 'Phone': '',\n",
-      " 'PostCode': 'SE18 7DY',\n",
-      " 'RightToReply': '',\n",
-      " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('6435b6241f56070430adaf53'),\n",
-      " 'geocode': {'latitude': '51.49014200', 'longitude': '0.08384000'},\n",
-      " 'scores': {'ConfidenceInManagement': '', 'Hygiene': '', 'Structural': ''}}\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{'_id': ObjectId('643b3f85e85e67a2fe53d456'),\n",
+       " 'BusinessName': 'Penang Flavours',\n",
+       " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+       " 'BusinessTypeID': 1,\n",
+       " 'AddressLine1': 'Penang Flavours',\n",
+       " 'AddressLine2': '146A Plumstead Rd',\n",
+       " 'AddressLine3': 'London',\n",
+       " 'AddressLine4': '',\n",
+       " 'PostCode': 'SE18 7DY',\n",
+       " 'Phone': '',\n",
+       " 'LocalAuthorityCode': '511',\n",
+       " 'LocalAuthorityName': 'Greenwich',\n",
+       " 'LocalAuthorityWebSite': 'http://www.royalgreenwich.gov.uk',\n",
+       " 'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk',\n",
+       " 'scores': {'Hygiene': '', 'Structural': '', 'ConfidenceInManagement': ''},\n",
+       " 'SchemeType': 'FHRS',\n",
+       " 'geocode': {'longitude': 0.08384, 'latitude': '51.49014200'},\n",
+       " 'RightToReply': '',\n",
+       " 'Distance': 4623.972328074718,\n",
+       " 'NewRatingPending': True}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Confirm that the new restaurant was updated\n"
+    "# Confirm that the new restaurant was updated\n",
+    "est.find_one({\"BusinessName\":new_restaurant[\"BusinessName\"]})"
    ]
   },
   {
@@ -384,7 +406,7 @@
     {
      "data": {
       "text/plain": [
-       "994"
+       "0"
       ]
      },
      "execution_count": 14,
@@ -393,7 +415,9 @@
     }
    ],
    "source": [
-    "# Find how many documents have LocalAuthorityName as \"Dover\"\n"
+    "# Find how many documents have LocalAuthorityName as \"Dover\"\n",
+    "query = {\"LocalAuthorityName\": \"Dover\"}\n",
+    "est.count_documents(query)"
    ]
   },
   {
@@ -405,7 +429,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.DeleteResult at 0x25785e18c10>"
+       "<pymongo.results.DeleteResult at 0x1a687d1e940>"
       ]
      },
      "execution_count": 15,
@@ -414,7 +438,9 @@
     }
    ],
    "source": [
-    "# Delete all documents where LocalAuthorityName is \"Dover\"\n"
+    "# Delete all documents where LocalAuthorityName is \"Dover\"\n",
+    "query = {\"LocalAuthorityName\": \"Dover\"}\n",
+    "est.delete_many(query)"
    ]
   },
   {
@@ -435,7 +461,8 @@
     }
    ],
    "source": [
-    "# Check if any remaining documents include Dover\n"
+    "# Check if any remaining documents include Dover\n",
+    "est.count_documents(query)"
    ]
   },
   {
@@ -445,50 +472,54 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'AddressLine1': 'East Cliff Pavilion',\n",
-      " 'AddressLine2': 'Wear Bay Road',\n",
-      " 'AddressLine3': 'Folkestone',\n",
-      " 'AddressLine4': 'Kent',\n",
-      " 'BusinessName': 'The Pavilion',\n",
-      " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
-      " 'BusinessTypeID': 1,\n",
-      " 'ChangesByServerID': 0,\n",
-      " 'Distance': 4591.765489457773,\n",
-      " 'FHRSID': 1043695,\n",
-      " 'LocalAuthorityBusinessID': 'PI/000073616',\n",
-      " 'LocalAuthorityCode': '188',\n",
-      " 'LocalAuthorityEmailAddress': 'foodteam@folkestone-hythe.gov.uk',\n",
-      " 'LocalAuthorityName': 'Folkestone and Hythe',\n",
-      " 'LocalAuthorityWebSite': 'http://www.folkestone-hythe.gov.uk',\n",
-      " 'NewRatingPending': False,\n",
-      " 'Phone': '',\n",
-      " 'PostCode': 'CT19 6BL',\n",
-      " 'RatingDate': '2018-04-04T00:00:00',\n",
-      " 'RatingKey': 'fhrs_5_en-gb',\n",
-      " 'RatingValue': '5',\n",
-      " 'RightToReply': '',\n",
-      " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('6435b44dc8c008d6068397b5'),\n",
-      " 'geocode': {'latitude': '51.083812', 'longitude': '1.195625'},\n",
-      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1043695',\n",
-      "            'rel': 'self'}],\n",
-      " 'meta': {'dataSource': None,\n",
-      "          'extractDate': '0001-01-01T00:00:00',\n",
-      "          'itemCount': 0,\n",
-      "          'pageNumber': 0,\n",
-      "          'pageSize': 0,\n",
-      "          'returncode': None,\n",
-      "          'totalCount': 0,\n",
-      "          'totalPages': 0},\n",
-      " 'scores': {'ConfidenceInManagement': 5, 'Hygiene': 5, 'Structural': 5}}\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{'_id': ObjectId('643609e4a9193452cf0bf0b9'),\n",
+       " 'FHRSID': 1043695,\n",
+       " 'ChangesByServerID': 0,\n",
+       " 'LocalAuthorityBusinessID': 'PI/000073616',\n",
+       " 'BusinessName': 'The Pavilion',\n",
+       " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+       " 'BusinessTypeID': 1,\n",
+       " 'AddressLine1': 'East Cliff Pavilion',\n",
+       " 'AddressLine2': 'Wear Bay Road',\n",
+       " 'AddressLine3': 'Folkestone',\n",
+       " 'AddressLine4': 'Kent',\n",
+       " 'PostCode': 'CT19 6BL',\n",
+       " 'Phone': '',\n",
+       " 'RatingValue': '5',\n",
+       " 'RatingKey': 'fhrs_5_en-gb',\n",
+       " 'RatingDate': '2018-04-04T00:00:00',\n",
+       " 'LocalAuthorityCode': '188',\n",
+       " 'LocalAuthorityName': 'Folkestone and Hythe',\n",
+       " 'LocalAuthorityWebSite': 'http://www.folkestone-hythe.gov.uk',\n",
+       " 'LocalAuthorityEmailAddress': 'foodteam@folkestone-hythe.gov.uk',\n",
+       " 'scores': {'Hygiene': 5, 'Structural': 5, 'ConfidenceInManagement': 5},\n",
+       " 'SchemeType': 'FHRS',\n",
+       " 'geocode': {'longitude': 1.195625, 'latitude': '51.083812'},\n",
+       " 'RightToReply': '',\n",
+       " 'Distance': 4591.765489457773,\n",
+       " 'NewRatingPending': False,\n",
+       " 'meta': {'dataSource': None,\n",
+       "  'extractDate': '0001-01-01T00:00:00',\n",
+       "  'itemCount': 0,\n",
+       "  'returncode': None,\n",
+       "  'totalCount': 0,\n",
+       "  'totalPages': 0,\n",
+       "  'pageSize': 0,\n",
+       "  'pageNumber': 0},\n",
+       " 'links': [{'rel': 'self',\n",
+       "   'href': 'https://api.ratings.food.gov.uk/establishments/1043695'}]}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Check that other documents remain with 'find_one'\n"
+    "# Check that other documents remain with 'find_one'\n",
+    "est.find_one()"
    ]
   },
   {
@@ -508,7 +539,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x257881714c0>"
+       "<pymongo.results.UpdateResult at 0x1a687d1ed00>"
       ]
      },
      "execution_count": 18,
@@ -517,7 +548,21 @@
     }
    ],
    "source": [
-    "# Change the data type from String to Decimal for longitude and Change the data type from String to Decimal for latitude\n"
+    "# Change the data type from String to Decimal for longitude and Change the data type from String to Decimal for latitude\n",
+    "est.update_many(\n",
+    "    {},\n",
+    "    [\n",
+    "        {\n",
+    "            \"$set\":\n",
+    "            {\n",
+    "                \"geocode.longitude\": \n",
+    "                {\n",
+    "                    \"$toDouble\": \"$geocode.longitude\"\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
+    "    ]\n",
+    ")"
    ]
   },
   {
@@ -553,8 +598,8 @@
       " 'RatingValue': '5',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('6435b44dc8c008d6068397b5'),\n",
-      " 'geocode': {'latitude': 51.083812, 'longitude': 1.195625},\n",
+      " '_id': ObjectId('643609e4a9193452cf0bf0b9'),\n",
+      " 'geocode': {'latitude': '51.083812', 'longitude': 1.195625},\n",
       " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1043695',\n",
       "            'rel': 'self'}],\n",
       " 'meta': {'dataSource': None,\n",
@@ -570,7 +615,8 @@
     }
    ],
    "source": [
-    "# Check that the coordinates are now numbers\n"
+    "# Check that the coordinates are now numbers\n",
+    "pp(est.find_one())"
    ]
   },
   {
