--- a/NoSQL_analysis_Part3-Starter.ipynb
+++ b/NoSQL_analysis_Part3-Starter.ipynb
@@ -1198,21 +1198,21 @@
     "longitude = 0.08384000\n",
     "\n",
     "query = {\n",
-    "    'RatingValue':\n",
+    "    \"RatingValue\":\n",
     "    {\n",
-    "        '$eq': '5'\n",
+    "        \"$eq\": \"5\"\n",
     "    },\n",
-    "    'geocode.longitude':\n",
+    "    \"geocode.longitude\":\n",
     "    {\n",
-    "        '$gt':(longitude - degree_search),\n",
-    "        '$lt':(longitude + degree_search)},\n",
-    "        'geocode.latitude':\n",
+    "        \"$gt\":(longitude - degree_search),\n",
+    "        \"$lt\":(longitude + degree_search)},\n",
+    "        \"geocode.latitude\":\n",
     "        {\n",
-    "            '$gt':(latitude - degree_search),\n",
-    "            '$lt':(latitude + degree_search)\n",
+    "            \"$gt\":(latitude - degree_search),\n",
+    "            \"$lt\":(latitude + degree_search)\n",
     "        }\n",
     "}\n",
-    "sort = [('scores.Hygiene', - 1)]\n",
+    "sort = [(\"scores.Hygiene\", - 1)]\n",
     "limit = 5\n",
     "results = (list(UKfoodEst.find(query).sort(sort).limit(limit)))\n",
     "\n",
