Updated .ipynb files

--- a/NoSQL_setup_Part1andPart2-Starter.ipynb
+++ b/NoSQL_setup_Part1andPart2-Starter.ipynb
@@ -134,7 +134,7 @@
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
       " '_id': ObjectId('643609e4a9193452cf0bf0b9'),\n",
-      " 'geocode': {'latitude': '51.083812', 'longitude': 1.195625},\n",
+      " 'geocode': {'latitude': 51.083812, 'longitude': 1.195625},\n",
       " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1043695',\n",
       "            'rel': 'self'}],\n",
       " 'meta': {'dataSource': None,\n",
@@ -228,7 +228,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertOneResult at 0x1a687cfddf0>"
+       "<pymongo.results.InsertOneResult at 0x1a875180df0>"
       ]
      },
      "execution_count": 9,
@@ -266,7 +266,7 @@
        " 'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk',\n",
        " 'scores': {'Hygiene': '', 'Structural': '', 'ConfidenceInManagement': ''},\n",
        " 'SchemeType': 'FHRS',\n",
-       " 'geocode': {'longitude': 0.08384, 'latitude': '51.49014200'},\n",
+       " 'geocode': {'longitude': 0.08384, 'latitude': 51.490142},\n",
        " 'RightToReply': '',\n",
        " 'Distance': 4623.972328074718,\n",
        " 'NewRatingPending': True}"
@@ -333,7 +333,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x1a685a80b50>"
+       "<pymongo.results.UpdateResult at 0x1a8773c66d0>"
       ]
      },
      "execution_count": 12,
@@ -373,7 +373,7 @@
        " 'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk',\n",
        " 'scores': {'Hygiene': '', 'Structural': '', 'ConfidenceInManagement': ''},\n",
        " 'SchemeType': 'FHRS',\n",
-       " 'geocode': {'longitude': 0.08384, 'latitude': '51.49014200'},\n",
+       " 'geocode': {'longitude': 0.08384, 'latitude': 51.490142},\n",
        " 'RightToReply': '',\n",
        " 'Distance': 4623.972328074718,\n",
        " 'NewRatingPending': True}"
@@ -429,7 +429,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.DeleteResult at 0x1a687d1e940>"
+       "<pymongo.results.DeleteResult at 0x1a8773c6340>"
       ]
      },
      "execution_count": 15,
@@ -496,7 +496,7 @@
        " 'LocalAuthorityEmailAddress': 'foodteam@folkestone-hythe.gov.uk',\n",
        " 'scores': {'Hygiene': 5, 'Structural': 5, 'ConfidenceInManagement': 5},\n",
        " 'SchemeType': 'FHRS',\n",
-       " 'geocode': {'longitude': 1.195625, 'latitude': '51.083812'},\n",
+       " 'geocode': {'longitude': 1.195625, 'latitude': 51.083812},\n",
        " 'RightToReply': '',\n",
        " 'Distance': 4591.765489457773,\n",
        " 'NewRatingPending': False,\n",
@@ -539,7 +539,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x1a687d1ed00>"
+       "<pymongo.results.UpdateResult at 0x1a875174850>"
       ]
      },
      "execution_count": 18,
@@ -558,6 +558,10 @@
     "                \"geocode.longitude\": \n",
     "                {\n",
     "                    \"$toDouble\": \"$geocode.longitude\"\n",
+    "                },\n",
+    "                \"geocode.latitude\":\n",
+    "                {\n",
+    "                    \"$toDouble\": \"$geocode.latitude\"\n",
     "                }\n",
     "            }\n",
     "        }\n",
@@ -599,7 +603,7 @@
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
       " '_id': ObjectId('643609e4a9193452cf0bf0b9'),\n",
-      " 'geocode': {'latitude': '51.083812', 'longitude': 1.195625},\n",
+      " 'geocode': {'latitude': 51.083812, 'longitude': 1.195625},\n",
       " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1043695',\n",
       "            'rel': 'self'}],\n",
       " 'meta': {'dataSource': None,\n",
@@ -623,6 +627,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ae021100",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d07ee7f",
    "metadata": {},
    "outputs": [],
    "source": []
